--- a/views/category.html
+++ b/views/category.html
@@ -21,7 +21,7 @@
                     <div class="product-upper">
                         <img src="{$value.desphoto}" alt="">
                     </div>
-                    <h2><a href="/products/{$value.desurl}"></a>{$value.desproduct}</h2>
+                    <h2><a href="/products/{$value.desurl}">{$value.desproduct}</a></h2>
                     <div class="product-carousel-price">
                         <ins>R${function="formatPrice($value.vlprice)"}</ins>
                     </div>  
