Carrinho de compras

--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -24,7 +24,7 @@
                         <div class="col-sm-6">
                             <div class="product-images">
                                 <div class="product-main-img">
-                                    <img src="{$product.desproduct}">
+                                    <img src="{$product.desphoto}">
                                 </div>
                             </div>
                         </div>
